--- a/unit_convertor/index.html
+++ b/unit_convertor/index.html
@@ -31,13 +31,13 @@
       </head>
       <body>
         <nav class="navbar  fixed-top navbar-dark bg-dark">
-            <h2 style="color:white;margin-left:40%;">Unit Convertor</h2>
+            <h2 style="color:white;margin:auto;">Unit Convertor</h2>
         </nav>
-        <div class="container" style="width:40%">
+        <div class="container" style="width:70%;margin-top: 20%;">
             <table class="table  table-dark">
                 <tbody>
                     <tr>
-                        <td colspan="1"><span><i>Input value</i></span><input class="form-control" type="number" id="input"/></td> 
+                        <td colspan="1"><span><i>Input</i></span><input class="form-control" type="number" id="input"/></td> 
                         <td colspan="1"><span><i>Result</i></span><input class="form-control" type="text" id="result" disabled/></td> 
                         <td><span><i>Clear</i></span><input type="button" class="btn btn-danger btn-block" value="C" onclick="clr()"/> </td>
                         <!--to clear the display box clr() function-->
@@ -46,13 +46,22 @@
                         <td>
                             <select class="form-control" id="Unit" onclick="callme()">
                                 <option>Select Unit</option>
+                                <optgroup label="Weight">
                                 <option value="kg">Kilograms</option>
-                                <option value="cel">Celsius</option>
-                                <option value="mtr">Metre</option>
                                 <option value="pnd">Pounds</option>
+                                </optgroup>
+                                <optgroup label="Temperature">
+                                <option value="cel">Celsius</option>
                                 <option value="fnt">Farenheit</option>
+                                </optgroup>
+                                <optgroup label="Distance">
+                                <option value="mtr">Metre</option>
+                                <option value="km">Kilometer</option>
+                                </optgroup>
+                                <optgroup label="Area">
                                 <option value="yrd">Sq. yards</option>
                                 <option value="feet">Sq. Feet</option>
+                                </optgroup>
                               </select>
                         </td>
                         <td>
