--- a/unit_convertor/index.html
+++ b/unit_convertor/index.html
@@ -27,6 +27,7 @@
                 width:100%;
                     }
         </style>
+        <link rel="icon" type="image/png" href="https://img.icons8.com/doodle/48/000000/calculator--v1.png"/>
         <title>Unit Convertor</title>
       </head>
       <body>
