--- a/js_calculator/index.html
+++ b/js_calculator/index.html
@@ -27,13 +27,14 @@
                 width:100%;
                     }
         </style>
+        <link rel="icon" type="image/png" href="https://img.icons8.com/dusk/64/000000/calculator.png"/>
         <title>Simple Calculator</title>
       </head>
       <body>
         <nav class="navbar  fixed-top navbar-dark bg-dark">
-            <h2 style="color:white;margin-left:40%;">Simple calculator</h2>
+            <h2 style="color:white;margin:auto;">Simple calculator</h2>
         </nav>
-        <div class="container" style="width:40%">
+        <div class="container" style="width:70%">
             <table class="table  table-dark">
                 <thead>
                   <tr>
