--- a/js_calculator/index.html
+++ b/js_calculator/index.html
@@ -8,10 +8,6 @@
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
         <script src="scripts.js"></script>
         <style>
-            table  {
-                margin-top: 30%;
-                    }
-
             body{
                 background-image: url(bg.jpg);
                 }
@@ -26,15 +22,19 @@
                 height:30px;
                 width:100%;
                     }
+            .container{
+                padding:10%;
+            }
+            
         </style>
         <link rel="icon" type="image/png" href="https://img.icons8.com/dusk/64/000000/calculator.png"/>
         <title>Simple Calculator</title>
       </head>
       <body>
-        <nav class="navbar  fixed-top navbar-dark bg-dark">
+        <nav class="navbar  navbar-toggleable-xl  navbar-inverse  navbar-dark bg-dark">
             <h2 style="color:white;margin:auto;">Simple calculator</h2>
         </nav>
-        <div class="container" style="width:70%">
+        <div class="container">
             <table class="table  table-dark">
                 <thead>
                   <tr>
