--- a/unit_convertor/index.html
+++ b/unit_convertor/index.html
@@ -8,8 +8,8 @@
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
         <script src="scripts.js"></script>
         <style>
-            table  {
-                margin-top: 30%;
+            .container  {
+                padding: 9%;
                     }
 
             body{
@@ -31,10 +31,10 @@
         <title>Unit Convertor</title>
       </head>
       <body>
-        <nav class="navbar  fixed-top navbar-dark bg-dark">
+        <nav class="navbar navbar-toggleable-xl  navbar-inverse navbar-dark bg-dark">
             <h2 style="color:white;margin:auto;">Unit Convertor</h2>
         </nav>
-        <div class="container" style="width:70%;margin-top: 20%;">
+        <div class="container">
             <table class="table  table-dark">
                 <tbody>
                     <tr>
